--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ body {
 
 .top-wrapper {
     padding: 180px 0 100px 0;
-    background-image: url(pictures/Italy001.jpg);
+    background-image: url(Italy001.jpg);
     background-size: cover;
     color: white;
     text-align: center;
